# GrassmannRegistration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RGBD_odom.sh  config.txt  config_line.txt  toy_example.ipynb
include/: l2l.hpp  l2p.hpp  l2p_fitting.hpp  line_3d.hpp  line_fitting.hpp  p2p.hpp  p2p_fitting.hpp  plane_3d.hpp  refinement.hpp  rotation_node.hpp  util_funcs.hpp
src/: l2l.cpp  l2l_main.cpp  l2p.cpp  l2p_fitting.cpp  l2p_main.cpp  line_3d.cpp  line_fitting.cpp  p2p.cpp  p2p_fitting.cpp  p2p_main.cpp  plane_3d.cpp  refine_main.cpp  refinement.cpp  rotation_node.cpp  util_funcs.cpp
